--- a/2.Formulario-responsive/style.css
+++ b/2.Formulario-responsive/style.css
@@ -11,13 +11,17 @@ body {
     line-height: 1.6;
 }
 
+header {
+    background-color: black;
+}
+
 .header-container {
     display: flex;
-    text-align: justify;
     width: 100%;
     margin: 0 auto;
-    padding: 10px 10px;
+    padding: 15px 10px;
     background-color: black;
+    position: relative;
 }
 
 .nav-menu {
@@ -30,12 +34,34 @@ body {
     color: white;
     text-decoration: none;
     font-weight: 500;
-    text-align: left;
+    padding: 5px 10px;
+}
+
+.hamburger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    padding: 5px;
+    position: absolute;
+    left: 20px;
+}
+
+.hamburger span {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 3px 0;
+    transition: 0.3s;
+}
+
+#menu-checkbox {
+    display: none;
 }
 
 .content {
     max-width: 1200px;
     margin: 40px auto;
+    padding: 0 20px;
 }
 
 h1 {
@@ -45,9 +71,13 @@ h1 {
 }
 
 @media (max-width: 600px) {
+    .header-container {
+        justify-content: space-between;
+        padding: 10px 20px;
+    }
     .nav-menu {
         position: absolute;
-        top: 60px;
+        top: 100%;
         left: 0;
         width: 100%;
         background-color: black;
@@ -59,18 +89,18 @@ h1 {
         gap: 0;
     }
     .nav-menu li {
-        margin: 15px 0;
         width: 100%;
         text-align: left;
     }
     .nav-menu a {
         display: block;
-        padding: 10px;
+        padding: 15px 20px;
         width: 100%;
-        text-align: left;
+        border-bottom: 1px solid #333;
     }
     .hamburger {
         display: flex;
+        position: static;
     }
     #menu-checkbox:checked~.nav-menu {
         max-height: 300px;
